[gd_scene load_steps=5 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="main" type="Node"]
script = ExtResource( 3 )
Mob = ExtResource( 2 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 96, 80 )

[node name="mobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="scoreTimer" type="Timer" parent="."]

[node name="startTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="startposition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="mobpath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="mobspawnlocation" type="PathFollow2D" parent="mobpath"]
[connection signal="hit" from="player" to="." method="game_over"]
[connection signal="timeout" from="mobTimer" to="." method="_on_mobTimer_timeout"]
[connection signal="timeout" from="scoreTimer" to="." method="_on_scoreTimer_timeout"]
[connection signal="timeout" from="startTimer" to="." method="_on_startTimer_timeout"]
